# LLVM-18-Tutorials

./: .gitignore  BuildAllFiles.sh  BuildLibs.sh  README.md
HLS_Data_Lib/: README.md
HLS_Data_Lib/add/: add
HLS_Data_Lib/and/: and
HLS_Data_Lib/dmuladd/: dmuladd
HLS_Data_Lib/mul/: mul
Implementations/: CMakeLists.txt
Implementations/HI_APIntSrcAnalysis/: HI_APIntSrcAnalysis.cc  HI_APIntSrcAnalysis.h  README.md
Implementations/HI_APIntUsage/: HI_APIntUsage.cc  README.md
Implementations/HI_AggressiveLSR_MUL/: HI_AggressiveLSR_MUL.cc  HI_AggressiveLSR_MUL.h  README.md
Implementations/HI_ArrayAccessPattern/: HI_ArrayAccessPattern.cc  HI_ArrayAccessPattern.h
Implementations/HI_ArrayInfo/: CMakeLists.txt  HI_ArrayInfo.cc  HI_ArrayInfo.h  README.md
Implementations/HI_ArraySensitiveToLoopLevel/: HI_ArraySensitiveToLoopLevel.h
Implementations/HI_ConstantDivisorOpt/: CMakeLists.txt  HI_ConstantDivisorOpt.cc  HI_ConstantDivisorOpt.h
Implementations/HI_DependenceList/: HI_DependenceList.cc  README.md
Implementations/HI_DuplicateInstRm/: HI_DuplicateInstRm.h
Implementations/HI_FaddOrderOpt/: HI_FaddOrderOpt.h
Implementations/HI_FindFunctions/: HI_FindFunction.cc  HI_FindFunction.h  README.md
Implementations/HI_FunctionInstantiation/: HI_FunctionInstantiation.h
Implementations/HI_FunctionInterfaceInfo/: HI_FunctionInterfaceInfo.cc  HI_FunctionInterfaceInfo.h  README.md
Implementations/HI_GEP_OffsetCombine/: HI_GEP_OffsetCombine.h
Implementations/HI_HLSDuplicateInstRm/: HI_HLSDuplicateInstRm.h
Implementations/HI_IR2SourceCode/: HI_IR2SourceCode.cc  HI_IR2SourceCode.h
Implementations/HI_IRBuilder/: CMakeLists.txt  HI_IRBuilder.cc  HI_IRBuilder.h  README.md
Implementations/HI_InstructionLatencyCollect/: HI_InstructionLatencyCollect.h
Implementations/HI_InstructionMoveBackward/: CMakeLists.txt  HI_InstructionMoveBackward.cc  HI_InstructionMoveBackward.h  README.md
Tests/: README.md
Tests/LLVM_exp4a_cl/: CMakeLists.txt  LLVM_exp4a_cl.cc  LLVM_exp4a_cl.h  README.md
(+183 files in other folders)
